improvements to #5; preparation for release; updated dependencies to 1.21.1