@@ -1,12 +1,12 @@
 package me.teamaster.nopeeking;
 
-import me.shedaniel.autoconfig.ConfigData;
 import me.shedaniel.autoconfig.annotation.Config;
+import me.shedaniel.autoconfig.ConfigData;
 
-import java.util.ArrayList;
 import java.util.List;
+import java.util.Arrays;
 
 @Config(name = "no-peeking")
 public class NoPeekingConfig implements ConfigData {
-    public ArrayList<String> commands = new ArrayList<>(List.of("l", "login", "register"));
+    public List<String> commandsToObfuscate = Arrays.asList("/l", "/login", "/register");
 }
